(1) Fix issue with notebook in jupyter root not doing correct file selection (2) Fix issue with files possibly not being included first time (3) Fix spacing between "Additional Files" label and "Select Files..." button, as well as between both and the file list.

--- a/rsconnect_jupyter/static/main.css
+++ b/rsconnect_jupyter/static/main.css
@@ -112,3 +112,8 @@ p {
     padding-left: 1em;
     font-weight: bold;
 }
+
+#rsc-add-files-label {
+    margin-right: 1em;
+    margin-bottom: 2em;
+}
